--- a/styles.css
+++ b/styles.css
@@ -2,24 +2,31 @@ div {
   border: solid 1px #eee;
 }
 
-.navbar-container{
-//  height: 70px;
-//  width: 90%;
-  display: block;
-  vertical-align: middle;
+.navbar{
+  height: 70px;
+  width: 100%;
+//  display: block;
+//  vertical-align: middle;
+  border-bottom: 1px solid black;
 }
 
 #cart{
   height: 40px;
   width: 100px;
   vertical-align: middle;
+  line-height: 70px;
+//  display: inline-block;
   float: right;
+  padding-right: 20px;
 }
 
 #mail{
   height: 40px;
   width: 40px;
   vertical-align: middle;
+  line-height: 70px;
+  padding-right: 5px;
+//  display: inline-block;
   float: right;
 }
 
@@ -37,18 +44,53 @@ div {
 
 #viking-store h2{
   font-size: 24px;
-  display: inline-block;
+//  display: inline-block;
+  line-height: 70px;
   vertical-align: middle;
   float: left;
+  padding-left: 20px;
 }
 
 #big_viking_logo{
-  width = 100%
+  text-align: center;
+  border: 1px solid black;
 }
 
 #big_viking_logo img{
-  width: 700px;
+  width: 750px;
   height: 400px;
+  padding-top: 16px;
   //display: block;
+}
 
+#best{
+  //width: 750px;
+  height: 100px;
+  background-color: black;;
+}
+
+#best p{
+  color: white;
+  font-size: 40px;
+  vertical-align: middle;
+  line-height: 100px;
+}
+
+#choose{
+  line-height: 40px;
+  border: 1px solid black;
+}
+
+#choose p{
+  font-style: italic;
+  text-align: center;
+}
+
+.inv_img{
+  height: 100px;
+  width: 100px;
+}
+
+#inv_container{
+  border: 1px solid black;
 }
